homework html y css

--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -4,7 +4,9 @@ EJERCICIO 1
 
 <HTML>
     <head>
+        <link rel="stylesheet" href="styless.css">
         <style>
+            
             h1 {color: greenyellow;}
             img {width: 400px;}
             #thirdDiv { width: 500px; height: 600px; background-color: hotpink; padding: 50px;
